--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-carousel-3d": "^1.0.1",
+    "vue-router": "^4.2.4",
+    "vue3-carousel": "^0.3.1",
+    "vue3-carousel-3d": "^1.0.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
